--- a/02-elementos-textuais/introducao.tex
+++ b/02-elementos-textuais/introducao.tex
@@ -4,9 +4,10 @@
 
 \chapter{Introdução}\label{chap:introducao}
 %Posso colocar artigos que embasem esses exemplos
-Atualmente, é cada vez mais frequente a participação de robôs na nossa sociedade, desde em segmentos da indústria, onde esses robôs vêm se mostrando uma solução tanto econômica quanto eficiente, como também em salas cirúrgicas e no nosso cotidiano, na busca de facilitar ainda mais as tarefas \cite{HCWSNX02,CMHL08}. Entretanto, existem situações em que a utilização de um único robô é uma solução um tanto quanto lenta e muitas vezes inviável. Como exemplo de uma dessas situações pode-se citar o problema de patrulhamento de fronteira \cite{CMAJJBC08} : Para proteção das fronteiras de um país, manter diversas patrulhas de policiais circundando a área se torna muitas vezes caro e ineficiente. Uma alternativa é alocar um veículo aéreo não tripulado (\emph{VANT}) vigiando essas fronteiras, entretanto, apenas um \emph{VANT} como vigia deixará uma grande área da fronteira desprotegida por um longo período de tempo. E é por isso que a aplicação de um conjunto de robôs, cooperando entre si, se mostra muitas vezes interessante.  
+Atualmente, é cada vez mais frequente a participação de robôs na nossa sociedade, desde em segmentos da indústria, onde esses %robôs 
+vêm se mostrando uma solução tanto econômica quanto eficiente, como também em salas cirúrgicas e no nosso cotidiano, na busca de facilitar ainda mais as tarefas \cite{HCWSNX02,CMHL08}. Entretanto, existem situações em que a utilização de um único robô é uma solução um tanto quanto lenta e muitas vezes inviável. %Como exemplo de uma dessas situações pode-se citar o problema de patrulhamento de fronteira \cite{CMAJJBC08} : Para proteção das fronteiras de um país, manter diversas patrulhas de policiais circundando a área se torna muitas vezes caro e ineficiente. Uma alternativa é alocar um veículo aéreo não tripulado (\emph{VANT}) vigiando essas fronteiras, entretanto, apenas um \emph{VANT} como vigia deixará uma grande área da fronteira desprotegida por um longo período de tempo. E é por isso que a aplicação de um conjunto de robôs, cooperando entre si, se mostra muitas vezes interessante.  
 
-Dentro deste panorama, surge o interesse cada vez mais crescente pelo estudo, não só da robótica, mas também de um segmento mais específico da área da inteligência artificial distribuída, que é o estudo de sistemas multiagentes, que consiste em agentes autônomos que percebem a ação do ambiente e agem de acordo com a percepção da rede de agentes. Ou, segundo os autores \citeonline[p.~1]{RSDH2004}, "[...]sistemas multiagente são sistemas compostos de agentes autônomos que interagem entre si usando determinados mecanismos e protocolos". %verificar se está correto pq o texto original fala de sistemas abertos  
+Dentro deste panorama, surge o interesse cada vez mais crescente pelo estudo, não só da robótica, mas também de um segmento mais específico da área da inteligência artificial distribuída que é o estudo de sistemas multiagentes, que consiste em agentes autônomos que percebem a ação do ambiente e agem de acordo com a percepção da rede de agentes. Ou, segundo os autores \citeonline[p.~1]{RSDH2004}, "[...]sistemas multiagente são sistemas compostos de agentes autônomos que interagem entre si usando determinados mecanismos e protocolos". Como exemplo de uma dessas situações, onde um único robô se mostra uma solução inviável, pode-se citar o problema de patrulhamento de fronteira \cite{CMAJJBC08} : Para proteção das fronteiras de um país, manter diversas patrulhas de policiais circundando a área se torna muitas vezes caro e ineficiente. Uma alternativa é alocar um veículo aéreo não tripulado (\emph{VANT}) vigiando essas fronteiras, entretanto, apenas um \emph{VANT} como vigia deixará uma grande área da fronteira desprotegida por um longo período de tempo. E é por isso que a aplicação de um conjunto de robôs, cooperando entre si, se mostra muitas vezes interessante. 
 
 %Verificar como fazer esta citação (tradução de livro): Uma introduçao aos robos móveis
 %Segundo uma tradução de um livro do autor %Dr. HUmberto Secchi 
@@ -17,21 +18,30 @@ De acordo com \citeonline{SHA08} , "a robótica sempre ofereceu ao setor industr
 
 Hoje em dia, há tarefas que são realizadas em diversas áreas nas quais a presença ou o envolvimento direto de pessoas é algo perigoso, ou até mesmo inviável. Sendo assim, é crescente a necessidade de se estudar outros meios de acesso a essas situações de risco, sem que isso signifique um risco à vida humana. Diante dessa problemática, o estudo de estratégias de controle de robôs móveis vêm aumentando consideravelmente. Não só para problemas que colocam em risco a vida humana, mas também problemas onde a aplicação dos robôs móveis otimizaria o tempo e eficiência da resolução destes problemas. Dentre estes problemas mencionados pode-se citar \cite{GARHAS04,JTA13,MANJ09}: o patrulhamento de fronteiras, o controle de incêndio, mapeamento de áreas desconhecidas, busca de pessoas perdidas ou detecção e monitoramento de problemas em determinado alvo, dentre outros. 
 
-Como é possível perceber são inúmeras as possibilidades de aplicação dos robôs móveis. Entretanto, devido muitas vezes à urgência e/ou à extensão da cobertura do problema é necessário modular o mesmo e redistribuí-lo entre um sistema multiagente de robôs móveis. Sendo assim, surge aí mais uma demanda por estudos relativos a estratégias de controle de sistemas multiagente constituídos de robôs móveis. 
-Um dos desafios destes sistemas multiagentes não é só o controle de cada agente por si só, mas também como a frota irá se comportar como um todo, para viabilizar a resolução do problema e/ou também maximizar a eficiência na resolução do mesmo. É necessário que se garanta que os robôs não colidam entre si, e trabalhem em um sistema cooperativo de fato, e não atuando individualmente, %reformular - qro dizer que um robô não pode agir exatamente igual o outro, eles tem que agir de acordo com a frota,por exemplo dada uma frota que quer mapear uma estrutura não seria "lucrativo" (não é esta a palavra) que todos os robôs partissem do mesmo ponto e fossem pelo mesmo caminho (isso apenas um robô faz). O ideal é que cada um vá por um lado da estrutura
-anulando a vantagem da frota, como se essa fosse constituída de apenas um robô. 
+Como é possível perceber são inúmeras as possibilidades de aplicação dos robôs móveis. Entretanto, devido muitas vezes à urgência e/ou à extensão da cobertura do problema é necessário modular o mesmo e redistribuí-lo em um sistema multiagente de robôs móveis. Sendo assim, surge aí mais uma demanda por estudos relativos a estratégias de controle de sistemas multiagente constituídos de robôs móveis. 
+Um dos desafios destes sistemas é não só o controle de cada agente por si só, mas também como a frota como um todo irá se comportar, para viabilizar a resolução do problema e/ou também maximizar a eficiência na resolução do mesmo. É necessário que se garanta que os robôs não colidam entre si, e trabalhem em um sistema cooperativo de fato.%, e não atuando individualmente, %reformular - qro dizer que um robô não pode agir exatamente igual o outro, eles tem que agir de acordo com a frota,por exemplo dada uma frota que quer mapear uma estrutura não seria "lucrativo" (não é esta a palavra) que todos os robôs partissem do mesmo ponto e fossem pelo mesmo caminho (isso apenas um robô faz). O ideal é que cada um vá por um lado da estrutura
+%anulando a vantagem da frota, como se essa fosse constituída de apenas um robô. 
 
-Outra questão importante é a tolerância a falhas do sistema, isto é, como o sistema irá se comportar, se reestruturar e reorganizar diante da perda de um ou mais robôs, visto que além de ser um ambiente hostil (muitas vezes desconhecido ou até dinâmico), existem outros fatores críticos, dentre eles: falha de comunicação, ou desligamento de um dos agentes devido ao esgotamento de bateria.
+Outra questão importante é a tolerância a falhas do sistema, isto é, como o sistema irá se comportar, se reestruturar e reorganizar diante da perda de um ou mais robôs, visto que além de ser um ambiente hostil (muitas vezes desconhecido ou até dinâmico), existem outros fatores críticos, dentre eles: falha de comunicação ou desligamento de um dos agentes devido ao esgotamento de bateria.
 
 \section{Objetivos}
 \label{sec:objetivos}
 
 %Este trabalho tem como objetivo o estudo de estratégias de controle de formação de uma frota de robôs e seu comportamento em relação à sua estrutura e ao problema, ao se deparar com falhas de um ou mais robôs, bem como a implementação deste sistema multiagente em uma plataforma experimental.
-Este trabalho tem como objetivo o estudo de estratégias de controle de formação de uma frota de robôs tendo em vista o cumprimento de uma dada missão, sendo um objetivo secundário o comportamento do sistema em relação à falha de um ou mais robôs. Outro objetivo deste trabalho é a implementação deste sistema multiagente em uma plataforma experimental.
+%Este trabalho tem como objetivo o estudo de estratégias de controle de formação de uma frota de robôs tendo em vista o cumprimento de uma dada missão, sendo um objetivo secundário o comportamento do sistema em relação à falha de um ou mais robôs. Outro objetivo deste trabalho é a implementação deste sistema multiagente em uma plataforma experimental.
+Este trabalho tem como objetivo geral o estudo de estratégias de controle de formação de uma frota de robôs tendo em vista o cumprimento de uma dada missão e a implementação deste sistema em uma plataforma experimental.
+\subsection{Objetivos específicos}
+\label{subsec:objEsp}
+Este trabalho tem como objetivos específicos:
+\begin{itemize}
+	\item Varredura de área em paralelo
+	\item Localizar e circular um determinado alvo de forma balanceada
+	\item Coordenar a frota para se reajustar conforme o tamanho da frota	 
+\end{itemize}
 
 \section{Definição do Problema}
 \label{sec:defProb}
-Visando cumprir esse objetivo, definiram-se dois problemas. O primeiro, consiste na coordenação de uma frota de robôs para que a mesma se alinhe paralelamente e eles sigam em linha reta, como em problemas de varreduras de área em paralelo. E o segundo, consiste em um controle de uma frota de \emph{N} robôs, para que a mesma localize um dado alvo no espaço e o circunde a uma distância \emph{R} e em um período \emph{T}, que se reajustará conforme o tamanho da frota.  
+Visando cumprir esse objetivo, definiram-se dois problemas. O primeiro, consiste na coordenação de uma frota de robôs para que a mesma se alinhe paralelamente e eles sigam em linha reta, como em problemas de varreduras de área em paralelo. O segundo, consiste em um controle de uma frota de \emph{N} robôs, para que a mesma localize um dado alvo no espaço e o circunde a uma distância \emph{R} e em um período \emph{T}, que se reajustará conforme o tamanho da frota.  
 
 \section{Infraestrutura Necessária}
 \label{sec:infra}
