--- a/02-elementos-textuais/simulacoes.tex
+++ b/02-elementos-textuais/simulacoes.tex
@@ -50,7 +50,7 @@ Serão feitas simulações com duas redes, a primeira será uma rede centralizad
 
 Já a segunda estratégia consiste em encontrar uma reta paralela ao eixo y onde, sua localização no eixo x é a média da posição dos robôs mais distantes entre sí do sistema. Ela foi implementada de modo a permitir que o robô adquirira uma velocidade angular. Sendo assim ele pode se deslocar em qualquer direção. Essa abordagem faz uso da malha de controle intermediário modelada no \autoref{chap:abordagememdelo} e apresenta problemas de colisão, já que os robôs podem se deslocar em qualquer direção.
 
-Não foi implementado neste trabalho um tratamento de colisão, foram adotadas algumas medidas para diminuir as colisões no sistema. A primeira medida foi estabelecer uma prioridade na rede que vai do mestre ao último escravo, aquele que possui menor prioridade para ao estar em menos de 20 centímetros de distância de outro robô. A segunda medida foi fazer com que os robôs convirjam um a um para o ponto desejado. Notou-se com essas medidas uma redução\footnote{Foram realizados 1000 experimentos com 300 amostras cada um, primeiro sem nenhuma medida para evitamento de colisão, depois apenas parando o robô com menor prioridade e por fim, uma combinação entre a segunda técnica e a técnica de convergir os robôs um a um para o ponto desejado. Percebeu-se com isso uma redução de 80\% com aplicação da primeira técnica e de 87\% com a aplicação de ambas as técnicas.} no número de colisões ocorridas no sistema. 
+Não foi implementado neste trabalho um tratamento de colisão, foram adotadas algumas medidas para diminuir as colisões no sistema. A primeira medida foi estabelecer uma prioridade na rede que vai do mestre ao último escravo, aquele que possui menor prioridade para ao estar em menos de 20 centímetros de distância de outro robô. A segunda medida foi fazer com que os robôs convirjam um a um para o ponto desejado. Notou-se com essas medidas uma redução\footnote{Foram realizados 1000 experimentos com 300 amostras cada um, primeiro sem nenhuma medida para evitamento de colisão, depois apenas parando o robô com menor prioridade e por fim, uma combinação entre a segunda técnica e a técnica de convergir os robôs um a um para o ponto desejado. Percebeu-se com isso uma redução de 80\% com aplicação da primeira técnica e de 87\% com a aplicação de ambas as técnicas.} no número de colisões ocorridas no sistema..
 
 Como pode ser visto na \autoref{fig:sP1A2}, essa abordagem também é viável entretanto, apesar de apresentar a vantagem de conceder mais autonomia aos robôs, deixando-os movimentar em qualquer direção, ela acarreta ao sistema problemas de colisão que quando não contornados podem prejudicar o sistema.
 
