--- a/02-elementos-textuais/testes.tex
+++ b/02-elementos-textuais/testes.tex
@@ -1,13 +1,14 @@
 \chapter{Teste das Malhas de Controle}
 \label{chap:testesMalhas}
-Para alcançar o objetivo final deste trabalho, fez-se uma modularização do problema que foi validada e integrada, módulo a módulo. Primeiramente será testada a malha 1 de controle de velocidade angular das rodas. Ou seja, após dado um comando de velocidade angular para roda quanto tempo a malha levará para estabilizar o sistema, isto é, para que o erro convirja para zero. 
+Para alcançar o objetivo final deste trabalho, fez-se uma modularização do problema que foi validada e integrada, módulo a módulo. Primeiramente será testada a malha 1 de controle de velocidade angular das rodas. %Ou seja, após dado um comando de velocidade angular para roda quanto tempo a malha levará para estabilizar o sistema, isto é, para que o erro convirja para zero. 
+Ou seja, ao passar um comando de velocidade angular para roda o sistema deverá estabilizar, convergindo o erro do mesmo para zero, em um determinado tempo que espera-se ser suficiente para atingir com o objetivo proposto.
 
 O primeiro teste a ser realizado será na malha de controle mais interna com cinco controladores diferentes: P, PI, PID, Incremental e o quinto, através de uma função polinomial que converte a velocidade angular desejada na potência a ser aplicada. Para utilizar essa função polinomial é necessário recorrer a um método da linguagem \emph{NXC} de ativação dos motores que já implementa um controlador de malha fechada. Essa função foi obtida por meio de um mapeamento da resposta do sistema às potências aplicadas. Em seguida foi realizada uma aproximação de 4º grau com os dados obtidos.
 %Essa função foi obtida por meio de um mapeamento das potências aplicadas e as velocidades adquiridas pelo motor. Em seguida foi realizada uma aproximação de 4º grau. %Esse mapeamento, assim como, a função aproximada foi realizada pelo Professor Tales Argolo Jesus e será utilizada neste trabalho.
 
 Para que a malha de controle interno cumpra seu objetivo é necessário que o erro entre a velocidade desejada e a velocidade real em cada roda tenda a zero. Ou seja, desejando-se que o robô tenha uma velocidade linear de $0.1 m/s$ e uma velocidade angular de $0.6 rad/s$, faz-se uma conversão desses valores utilizando da \autoref{eq:convVelAngRodas}, encontrando os valores desejados para cada uma das rodas. Feito isso, calcula-se o erro entre a velocidade desejada e a real de cada roda e passa esse erro como entrada para o controlador que deve aplicar uma potência nos motores pretendendo atingir a velocidade desejada.
 
-Para realizar o teste com a malha interna foram aplicadas três entradas distintas e foi observado o tempo de conversão do sistema para um estado estacionário e se o sistema estava convergindo para um erro próximo de zero. Utilizando-se de um intervalo de amostragem de cerca de 25 milissegundos, aplicou-se nas primeiras 100 amostras uma velocidade linear e angular nula. Feito isso nas próximas 400 amostras aplicou-se uma velocidade linear de $0.189 m/s$ e uma velocidade angular nula (velocidade angular de cada roda igual a $8.75 rad/s$) e nas 500 amostras seguintes manteve-se a velocidade linear anterior e foi acrescentada uma velocidade angular de $0.628 rad/s$ (sendo, $10.38 rad/s$ e $7.12 rad/s$, as velocidades angulares das rodas direita e esquerda, respectivamente). è importante destacar que no primeiro momento o robô deve permanecer parado, adquirir uma velocidade linear e caminhar em linha reta com uma velocidade de $0.189 m/s$, para então iniciar uma trajetória circular de raio de $30 cm$ e período de $10 s$.
+Para realizar o teste com a malha interna foram aplicadas três entradas distintas e foi observado o tempo de conversão do sistema para um estado estacionário e se o sistema estava convergindo para um erro próximo de zero. Utilizando-se de um intervalo de amostragem de cerca de 25 milissegundos, aplicou-se nas primeiras 100 amostras\footnote{Com intuito de facilitar a visualização dos tempos de ajuste do sistema, algumas amostras de dados foram retiradas. Essas amostras não interferem no entendimento do comportamento do sistema, visto que foram retiradas faixas em que o sistema já estava estável.} uma velocidade linear e angular nula. Feito isso nas próximas 400 amostras aplicou-se uma velocidade linear de $0.189 m/s$ e uma velocidade angular nula (velocidade angular de cada roda igual a $8.75 rad/s$) e nas 500 amostras seguintes manteve-se a velocidade linear anterior e foi acrescentada uma velocidade angular de $0.628 rad/s$ (sendo, $10.38 rad/s$ e $7.12 rad/s$, as velocidades angulares das rodas direita e esquerda, respectivamente). É importante destacar que no primeiro momento o robô deve permanecer parado, adquirir uma velocidade linear e caminhar em linha reta com uma velocidade de $0.189 m/s$, para então iniciar uma trajetória circular de raio de $30 cm$ e período de $10 s$.
 
 \section{Malha 1: Controlador Incremental}
 \label{m1ContInc}
