--- a/02-elementos-textuais/trab-relacionados.tex
+++ b/02-elementos-textuais/trab-relacionados.tex
@@ -3,9 +3,9 @@
 %
 \chapter{Trabalhos Relacionados}
 \label{chap:trabalhosRelacionados}
-Com o interesse cada vez mais crescente na área de robótica móvel e sistemas multiagente, tem havido uma demanda cada vez maior para estudos nestas áreas. O \emph{Lego Mindstorms\textregistered}, devido as suas limitações e devido a limitação do seu protocolo \emph{bluetooth} com a topologia "Mestre e Escravo", não é uma plataforma muito interessante de aplicação desses conceitos , entretanto, é uma excelente plataforma a ser utilizada nos estudos dos mesmos. Isto por que, é uma plataforma acessível, existe muita documentação auxiliar, muitos trabalhos relacionados a respeito e é muito simples de ser utilizada. Logo, vê-se muitos trabalhos relacionados a este, que envolvem o estudo da robótica móvel e de sistemas multiagente.
+Com o interesse cada vez mais crescente na área de robótica móvel e sistemas multiagente, tem havido uma demanda cada vez maior para estudos nestas áreas. O \emph{Lego Mindstorms\textregistered}, devido as suas limitações e devido a limitação do seu protocolo \emph{bluetooth} com a topologia "Mestre e Escravo", não é uma plataforma muito interessante de aplicação desses conceitos , entretanto, é uma excelente plataforma a ser utilizada nos estudos dos mesmos. Isto por que, é uma plataforma acessível, existe muita documentação auxiliar, muitos trabalhos relacionados a respeito e é muito simples de ser utilizada. %Logo, vê-se muitos trabalhos relacionados a este, que envolvem o estudo da robótica móvel e de sistemas multiagente.
 
-Existem muitos trabalhos distintos com sistemas multiagentes utilizando-se \emph{Lego Mindstorms\textregistered}, com as mais diversas configurações, objetivos distintos, e diferentes estruturas de rede, dentre outros. Entretanto, uma dificuldade reconhecida em todos os trabalhos são as limitações da plataforma, que possui uma quantidade de conexões e tipo de comunicação muito limitada. Para que essa limitação seja superada perde-se uma característica importante da plataforma, que é a simplicidade e facilidade de implementação. 
+Existem muitos trabalhos distintos com sistemas multiagentes utilizando-se \emph{Lego Mindstorms\textregistered}, com as mais diversas configurações, objetivos distintos e diferentes estruturas de rede, dentre outros. Entretanto, uma dificuldade reconhecida em todos os trabalhos é a limitação da plataforma, que possui uma quantidade de conexões e tipo de comunicação muito limitada. Para que essa limitação seja superada perde-se uma característica importante da plataforma, que é a simplicidade e facilidade de implementação. 
 
 O protocolo de comunicação disponível, por exemplo, só permite a comunicação \emph{'Master/Slave'} realizada de forma manual. Outras configurações requerem uma implementação mais complexa que afeta o custo/benefício de se utilizar essa plataforma, por perder a característica de implementação simples. Pode-se citar como um desses trabalhos, que abordam de forma mais dinâmica e independente a comunicação entre os robôs, a tese de \citeonline{leal2009reconfigurable}. Seu trabalho consiste em uma sociedade que se configura de forma autônoma, ou seja, tem-se uma sociedade de robôs independentes. Quando a um ou mais robôs é atribuída uma missão, eles se agrupam com outros indivíduos, coordenando-se em um time com o objetivo de cumprir a referida tarefa. %Esse trabalho aborda temas como: eleição de líder, adaptações para a plataforma \emph{Lego Mindstorms\textregistered} %indivíduos independentes que se agrupam e formam uma sociedade.
 
@@ -13,5 +13,5 @@ Entre outros trabalhos relacionados a este podemos citar, \citeonline{BDCMGA09} 
 
 Utilizando-se de uma unidade central de controle, ele primeiro propõe quatro robôs em pontos diferentes do espaço, orientados em qualquer sentido à circular um ponto qualquer no espaço, com auxilio da \emph{webcam} e do computador (unidade central de comando). O que se aproxima bastante deste trabalho, diferindo-se principalmente no que diz respeito à \emph{webcam} como o principal elemento do sistema de localização. %sensor de alimentação do sistema.
 
-Outro trabalho também muito interessante que pode-se citar é o de \citeonline{casini2011lego}, no qual os autores propõem propõe um laboratório remoto utilizando o \emph{LEGO  Mindstorms\textregistered}. O trabalho se resume  a um laboratório remoto para estudos de robótica móvel, em que tem-se um espaço de cerca de 13 metros quadrados que é filmado por duas câmeras, onde os robôs ficam e podem se movimentar. Foi então desenvolvida uma interface gráfica de acesso \emph{online} ao laboratório, através da qual os usuários podem acessar e utilizar o laboratório para o estudo de robótica móvel. 
+Outro trabalho também muito interessante que pode-se citar é o de \citeonline{casini2011lego}, no qual os autores propõem um laboratório remoto utilizando o \emph{LEGO  Mindstorms\textregistered}. O trabalho se resume  a um laboratório remoto para estudos de robótica móvel, em que tem-se um espaço de cerca de 13 metros quadrados que é filmado por duas câmeras, onde os robôs ficam e podem se movimentar. Foi então desenvolvida uma interface gráfica de acesso \emph{online} ao laboratório, através da qual os usuários podem acessar e utilizar o laboratório para o estudo de robótica móvel. 
 
