--- a/refbase.bib
+++ b/refbase.bib
@@ -181,3 +181,10 @@
 	year={1998},
 	publisher={IEEE}
 }
+
+@phdthesis{vieira2005,
+	title={Controle din{\^a}mico de rob{\^o}s m{\'o}veis com acionamento diferencial},
+	author={Vieira, Frederico Carvalho},
+	year={2005},
+	school={Universidade Federal do Rio Grande do Norte}
+}
